# prophet

./: .gitignore  LICENSE  README.md  config.env  pyproject.toml
prophet/: __init__.py  audioplayer.py  chatgpt.py  run.py  speechrecogniser.py  speechsynthesiser.py  utils.py
